--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NASA_API_KEY="DEMO_KEY"
 
 CHUCK_NORIS_BASE_URL="https://api.chucknorris.io/jokes/random"
 CHUCK_NORIS_CATEGORIES_URL="https://api.chucknorris.io/jokes/categories"
+RANDOM_JOKE_URL="https://api.chucknorris.io/jokes/random"
